deploy: 881f51fef1084d9d4c6813a22b304b16db65a55b

--- a/print.html
+++ b/print.html
@@ -2250,7 +2250,8 @@ We should take advantage of this tooling, and use smaller, more fine-grained dep
 <li>Small crates are easier to understand, and encourage more modular code.</li>
 <li>Crates allow for re-using code between projects.
 For example, the <code>url</code> crate was developed as part of the Servo browser engine,
-but has since found wide use outside the project. * Since the compilation unit
+but has since found wide use outside the project.</li>
+<li>Since the compilation unit
 of Rust is the crate, splitting a project into multiple crates can allow more of
 the code to be built in parallel.</li>
 </ul>
