--- a/idioms/ctor.html
+++ b/idioms/ctor.html
@@ -194,8 +194,8 @@ impl&lt;T&gt; Vec&lt;T&gt; {
 }
 </code></pre>
 <h2 id="see-also"><a class="header" href="#see-also">See also</a></h2>
-<p>The <a href="../patterns/builder.html">builder pattern</a> for constructing objects where
-there are multiple configurations.</p>
+<p>The <a href="../patterns/creational/builder.html">builder pattern</a> for constructing objects
+where there are multiple configurations.</p>
 
                     </main>
 
