--- a/idioms/dtor-finally.html
+++ b/idioms/dtor-finally.html
@@ -236,7 +236,7 @@ that destructors are not absolutely guaranteed to run. It also means that you
 must take extra care in your destructors not to panic, since it could leave
 resources in an unexpected state.</p>
 <h2 id="see-also"><a class="header" href="#see-also">See also</a></h2>
-<p><a href="../patterns/RAII.html">RAII</a>.</p>
+<p><a href="../patterns/behavioural/RAII.html">RAII guards</a>.</p>
 
                     </main>
 
