deploy: b809265f549fc334e9a638223c0aeee7b214ff2b

--- a/patterns/behavioural/RAII.html
+++ b/patterns/behavioural/RAII.html
@@ -260,7 +260,7 @@ is shorter than the lifetime of <code>self</code>.</p>
 using the guard object more ergonomic. Implementing a <code>get</code> method on the guard
 works just as well.</p>
 <h2 id="see-also"><a class="header" href="#see-also">See also</a></h2>
-<p><a href="../idioms/dtor-finally.html">Finalisation in destructors idiom</a></p>
+<p><a href="../../idioms/dtor-finally.html">Finalisation in destructors idiom</a></p>
 <p>RAII is a common pattern in C++: <a href="http://en.cppreference.com/w/cpp/language/raii">cppreference.com</a>,
 <a href="https://en.wikipedia.org/wiki/Resource_Acquisition_Is_Initialization">wikipedia</a>.</p>
 <p><a href="https://doc.rust-lang.org/1.0.0/style/ownership/raii.html">Style guide entry</a>
