--- a/patterns/behavioural/visitor.html
+++ b/patterns/behavioural/visitor.html
@@ -260,8 +260,8 @@ which performs the same duty.</p>
 <h2 id="see-also"><a class="header" href="#see-also">See also</a></h2>
 <p>The visitor pattern is a common pattern in most OO languages.</p>
 <p><a href="https://en.wikipedia.org/wiki/Visitor_pattern">Wikipedia article</a></p>
-<p>The <a href="fold.html">fold</a> pattern is similar to visitor but produces a new version of
-the visited data structure.</p>
+<p>The <a href="../creational/fold.html">fold</a> pattern is similar to visitor but produces
+a new version of the visited data structure.</p>
 
                     </main>
 
