--- a/patterns/creational/fold.html
+++ b/patterns/creational/fold.html
@@ -264,10 +264,10 @@ this fold pattern.</p>
 <p>In other languages, fold is usually used in the sense of Rust's iterators,
 rather than this pattern. Some functional languages have powerful constructs for
 performing flexible maps over data structures.</p>
-<p>The <a href="visitor.html">visitor</a> pattern is closely related to fold. They share the
-concept of walking a data structure performing an operation on each node.
-However, the visitor does not create a new data structure nor consume the old
-one.</p>
+<p>The <a href="../behavioural/visitor.html">visitor</a> pattern is closely related to fold.
+They share the concept of walking a data structure performing an operation on
+each node. However, the visitor does not create a new data structure nor consume
+the old one.</p>
 
                     </main>
 
