--- a/patterns/ffi/export.html
+++ b/patterns/ffi/export.html
@@ -376,13 +376,13 @@ with them:</p>
 into an opaque &quot;object&quot;</p>
 </li>
 <li>
-<p><a href="../idioms/ffi/errors.html">FFI Error Passing</a> explains error handling with integer
+<p><a href="../../idioms/ffi/errors.html">FFI Error Passing</a> explains error handling with integer
 codes and sentinel return values (such as <code>NULL</code> pointers)</p>
 </li>
 <li>
-<p><a href="../idioms/ffi/accepting-strings.html">Accepting Foreign Strings</a> allows accepting
+<p><a href="../../idioms/ffi/accepting-strings.html">Accepting Foreign Strings</a> allows accepting
 strings with minimal unsafe code, and is easier to get right than
-<a href="../idioms/ffi/passing-strings.html">Passing Strings to FFI</a></p>
+<a href="../../idioms/ffi/passing-strings.html">Passing Strings to FFI</a></p>
 </li>
 </ul>
 <p>However, not every API can be done this way.
