--- a/idioms/mem-replace.html
+++ b/idioms/mem-replace.html
@@ -229,9 +229,9 @@ its parts to decide what to do next. In the second phase we may conditionally
 change the value (as in the example above).</p>
 <p>The borrow checker won't allow us to take out <code>name</code> of the enum (because
 <em>something</em> must be there. We could of course <code>.clone()</code> name and put the clone
-into our <code>MyEnum::B</code>, but that would be an instance of the [Clone to satisfy
-the borrow checker] antipattern. Anyway, we can avoid the extra allocation by
-changing <code>e</code> with only a mutable borrow.</p>
+into our <code>MyEnum::B</code>, but that would be an instance of the <a href="../anti_patterns/borrow_clone.html">Clone to satisfy
+the borrow checker</a> antipattern. Anyway, we
+can avoid the extra allocation by changing <code>e</code> with only a mutable borrow.</p>
 <p><code>mem::take</code> lets us swap out the value, replacing it with it's default value,
 and returning the previous value. For <code>String</code>, the default value is an empty
 <code>String</code>, which does not need to allocate. As a result, we get the original
