deploy: d30b026811c6fe7e376fcfb94a6a684a2fc37fae

--- a/print.html
+++ b/print.html
@@ -442,7 +442,7 @@ and borrowed views of data.</p>
 <pre><code class="language-rust ignore">use std::ops::Deref;
 
 struct Vec&lt;T&gt; {
-    data: T,
+    data: RawVec&lt;T&gt;,
     //..
 }
 
