--- a/print.html
+++ b/print.html
@@ -182,7 +182,7 @@ It can also be viewed as a collection of solutions to many different problems.
 All of these solutions work together to solve a bigger problem.</p>
 <h2 id="design-patterns-in-rust"><a class="header" href="#design-patterns-in-rust">Design patterns in Rust</a></h2>
 <p>There are many problems that share the same form.
-Due to the fact that Rust is not object-oriented design patterns vary with
+Due to the fact that Rust is not object-oriented, design patterns vary with
 respect to other object-oriented programming languages.
 While the details are different, since they have the same form they can be
 solved using the same fundamental methods:</p>
