deploy: 6a7088c25c1c5d982c3de257936eb0c27a561474

--- a/print.html
+++ b/print.html
@@ -281,8 +281,7 @@ using a <code>&amp;'static str</code> as an input anyways (as we did when we use
 Even ignoring this special example, you may still find that using <code>&amp;str</code> will
 give you more flexibility than using a <code>&amp;String</code>.</p>
 <p>Let's now take an example where someone gives us a sentence, and we want to
-determine if any of the words in the sentence has a word that contains three
-consecutive vowels.
+determine if any of the words in the sentence contain three consecutive vowels.
 We probably should make use of the function we have already defined and simply
 feed in each word from the sentence.</p>
 <p>An example of this could look like this:</p>
