deploy: 9834f5719b056ebf2d6cba63ea089757bab5e52c

--- a/additional_resources/design-principles.html
+++ b/additional_resources/design-principles.html
@@ -213,30 +213,30 @@ unauthorized parties' direct access to them.</p>
 <h2 id="a-hrefhttpsenwikipediaorgwikicommande28093query_separationcommand-query-separationcqsa"><a class="header" href="#a-hrefhttpsenwikipediaorgwikicommande28093query_separationcommand-query-separationcqsa"><a href="https://en.wikipedia.org/wiki/Command%E2%80%93query_separation">Command-Query-Separation(CQS)</a></a></h2>
 <p>“Functions should not produce abstract side effects...only commands
 (procedures) will be permitted to produce side effects.” - Bertrand Meyer:
-Object Oriented Software Construction</p>
+Object-Oriented Software Construction</p>
 <h2 id="a-hrefhttpsenwikipediaorgwikiprinciple_of_least_astonishmentprinciple-of-least-astonishment-polaa"><a class="header" href="#a-hrefhttpsenwikipediaorgwikiprinciple_of_least_astonishmentprinciple-of-least-astonishment-polaa"><a href="https://en.wikipedia.org/wiki/Principle_of_least_astonishment">Principle of least astonishment (POLA)</a></a></h2>
 <p>a component of a system should behave in a way that most users will expect it
 to behave. The behavior should not astonish or surprise users</p>
 <h2 id="linguistic-modular-units"><a class="header" href="#linguistic-modular-units">Linguistic-Modular-Units</a></h2>
 <p>“Modules must correspond to syntactic units in the language used.” - Bertrand
-Meyer: Object Oriented Software Construction</p>
+Meyer: Object-Oriented Software Construction</p>
 <h2 id="self-documentation"><a class="header" href="#self-documentation">Self-Documentation</a></h2>
 <p>“The designer of a module should strive to make all information about the
-module part of the module itself.” - Bertrand Meyer: Object Oriented Software
+module part of the module itself.” - Bertrand Meyer: Object-Oriented Software
 Construction</p>
 <h2 id="uniform-access"><a class="header" href="#uniform-access">Uniform-Access</a></h2>
 <p>“All services offered by a module should be available through a uniform
 notation, which does not betray whether they are implemented through storage or
-through computation.” - Bertrand Meyer: Object Oriented Software Construction</p>
+through computation.” - Bertrand Meyer: Object-Oriented Software Construction</p>
 <h2 id="single-choice"><a class="header" href="#single-choice">Single-Choice</a></h2>
 <p>“Whenever a software system must support a set of alternatives, one and only
 one module in the system should know their exhaustive list.” - Bertrand Meyer:
-Object Oriented Software Construction</p>
+Object-Oriented Software Construction</p>
 <h2 id="persistence-closure"><a class="header" href="#persistence-closure">Persistence-Closure</a></h2>
 <p>“Whenever a storage mechanism stores an object, it must store with it the
 dependents of that object. Whenever a retrieval mechanism retrieves a
 previously stored object, it must also retrieve any dependent of that object
-that has not yet been retrieved.” - Bertrand Meyer: Object Oriented Software
+that has not yet been retrieved.” - Bertrand Meyer: Object-Oriented Software
 Construction</p>
 
                     </main>
