--- a/anti_patterns/borrow_clone.html
+++ b/anti_patterns/borrow_clone.html
@@ -218,7 +218,7 @@ that's a good indication this anti-pattern may be in use.</p>
 <li>the developer is still new to ownership</li>
 <li>the code doesn't have great speed or memory constraints
 (like hackathon projects or prototypes)</li>
-<li>satisfying the borrow checker is really complicated and you prefer to
+<li>satisfying the borrow checker is really complicated, and you prefer to
 optimize readability over performance</li>
 </ul>
 <p>If an unnecessary clone is suspected, The <a href="https://doc.rust-lang.org/book/ownership.html">Rust Book's chapter on Ownership</a>
