--- a/functional/generics-type-classes.html
+++ b/functional/generics-type-classes.html
@@ -190,7 +190,7 @@ type system.</p>
 <strong>polymorphic</strong> code.  This special behavior requires <code>impl</code> blocks to specify
 generic parameters: different values for the generic type cause different types,
 and different types can have different <code>impl</code> blocks.</p>
-<p>In object oriented languages, classes can inherit behavior from their parents.
+<p>In object-oriented languages, classes can inherit behavior from their parents.
 However, this allows the attachment of not only additional behavior to
 particular members of a type class, but extra behavior as well.</p>
 <p>The nearest equivalent is the runtime polymorphism in Javascript and Python,
@@ -400,7 +400,7 @@ methods apply to any connector. <sup class="footnote-reference"><a href="#5">5</
 <li>
 <p>The &quot;type state&quot; pattern -- where an object gains and loses API based on an
 internal state or invariant -- is implemented in Rust using the same basic
-concept, and a slightly different techinque. <sup class="footnote-reference"><a href="#6">6</a></sup></p>
+concept, and a slightly different technique. <sup class="footnote-reference"><a href="#6">6</a></sup></p>
 </li>
 </ul>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
