--- a/idioms/default.html
+++ b/idioms/default.html
@@ -210,7 +210,7 @@ fn main() {
     conf.check = true;
     println!(&quot;conf = {:#?}&quot;, conf);
         
-    // partial initalization with default values, creates the same instance
+    // partial initialization with default values, creates the same instance
     let conf1 = MyConfiguration {
         check: true,
         ..Default::default()
