--- a/idioms/option-iter.html
+++ b/idioms/option-iter.html
@@ -172,7 +172,7 @@
                         <h1 id="iterating-over-an-option"><a class="header" href="#iterating-over-an-option">Iterating over an <code>Option</code></a></h1>
 <h2 id="description"><a class="header" href="#description">Description</a></h2>
 <p><code>Option</code> can be viewed as a container that contains either zero or one
-elements. In particular, it implements the <code>IntoIterator</code> trait, and as such
+element. In particular, it implements the <code>IntoIterator</code> trait, and as such
 can be used with generic code that needs such a type.</p>
 <h2 id="examples"><a class="header" href="#examples">Examples</a></h2>
 <p>Since <code>Option</code> implements <code>IntoIterator</code>, it can be used as an argument to
