--- a/idioms/pass-var-to-closure.html
+++ b/idioms/pass-var-to-closure.html
@@ -215,7 +215,7 @@ let closure = move || {
 </span></code></pre></pre>
 <h2 id="advantages"><a class="header" href="#advantages">Advantages</a></h2>
 <p>Copied data are grouped together with closure definition, so their purpose is
-more clear and they will be dropped immediately even if they are not consumed
+more clear, and they will be dropped immediately even if they are not consumed
 by closure.</p>
 <p>Closure uses same variable names as surrounding code whether data are copied or
 moved.</p>
