--- a/idioms/priv-extend.html
+++ b/idioms/priv-extend.html
@@ -194,7 +194,7 @@ fn main(s: a::S) {
 <p>Adding a field to a struct is a mostly backwards compatible change.
 However, if a client uses a pattern to deconstruct a struct instance, they
 might name all the fields in the struct and adding a new one would break that
-pattern. The client could name some of the fields and use <code>..</code> in the pattern,
+pattern. The client could name some fields and use <code>..</code> in the pattern,
 in which case adding another field is backwards compatible. Making at least one
 of the struct's fields private forces clients to use the latter form of patterns,
 ensuring that the struct is future-proof.</p>
