--- a/idioms/rustdoc-init.html
+++ b/idioms/rustdoc-init.html
@@ -206,7 +206,7 @@ impl Connection {
 }
 </code></pre>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
-<p>Instead of typing all of this boiler plate to create an <code>Connection</code> and
+<p>Instead of typing all of this boilerplate to create an <code>Connection</code> and
 <code>Request</code> it is easier to just create a wrapping helper function which takes
 them as arguments:</p>
 <pre><code class="language-rust ignore">struct Connection {
@@ -230,7 +230,7 @@ impl Connection {
 }
 </code></pre>
 <p><strong>Note</strong> in the above example the line <code>assert!(response.is_ok());</code> will not
-actually run while testing because it is inside of a function which is never
+actually run while testing because it is inside a function which is never
 invoked.</p>
 <h2 id="advantages"><a class="header" href="#advantages">Advantages</a></h2>
 <p>This is much more concise and avoids repetitive code in examples.</p>
