--- a/patterns/behavioural/interpreter.html
+++ b/patterns/behavioural/interpreter.html
@@ -188,7 +188,7 @@ For simplicity, our expressions consist of ten digits <code>0</code>, ..., <code
 operations <code>+</code>, <code>-</code>. For example, the expression <code>2 + 4</code> is translated into
 <code>2 4  +</code>.</p>
 <h2 id="context-free-grammar-for-our-problem"><a class="header" href="#context-free-grammar-for-our-problem">Context Free Grammar for our problem</a></h2>
-<p>Our task is translate infix expressions into postfix ones. Let's define a context
+<p>Our task is translated infix expressions into postfix ones. Let's define a context
 free grammar for a set of infix expressions over <code>0</code>, ..., <code>9</code>, <code>+</code>, and <code>-</code>,
 where:</p>
 <ul>
