--- a/patterns/behavioural/newtype.html
+++ b/patterns/behavioural/newtype.html
@@ -171,7 +171,7 @@
                     <main>
                         <h1 id="newtype"><a class="header" href="#newtype">Newtype</a></h1>
 <p>What if in some cases we want a type to behave similar to another type or
-enforce some behaviour at compile time where using only type aliases would
+enforce some behaviour at compile time when using only type aliases would
 not be enough?</p>
 <p>For example, if we want to create a custom <code>Display</code> implementation for <code>String</code>
 due to security considerations (e.g. passwords).</p>
