--- a/patterns/creational/fold.html
+++ b/patterns/creational/fold.html
@@ -256,7 +256,7 @@ other hand if a node is not changed, reusing it is very efficient.</p>
 reused; however, a node must be cloned even if unchanged, which can be
 expensive.</p>
 <p>Using a reference counted pointer gives the best of both worlds - we can reuse
-the original data structure and we don't need to clone unchanged nodes. However,
+the original data structure, and we don't need to clone unchanged nodes. However,
 they are less ergonomic to use and mean that the data structures cannot be
 mutable.</p>
 <h2 id="see-also"><a class="header" href="#see-also">See also</a></h2>
