--- a/patterns/index.html
+++ b/patterns/index.html
@@ -180,7 +180,7 @@ language feature, or impossible to express due to a missing feature.</p>
 However, they are a great way to share intermediate and advanced level knowledge
 about a programming language.</p>
 <h2 id="design-patterns-in-rust"><a class="header" href="#design-patterns-in-rust">Design patterns in Rust</a></h2>
-<p>Rust has many very unique features. These features give us great benefit by removing
+<p>Rust has many unique features. These features give us great benefit by removing
 whole classes of problems. Some of them are also patterns that are <em>unique</em> to Rust.</p>
 <h2 id="yagni"><a class="header" href="#yagni">YAGNI</a></h2>
 <p>If you're not familiar with it, YAGNI is an acronym that stands for
