--- a/intro.html
+++ b/intro.html
@@ -176,7 +176,7 @@
 <h2 id="design-patterns"><a class="header" href="#design-patterns">Design patterns</a></h2>
 <p>When developing programs, we have to solve many problems.
 A program can be viewed as a solution to a problem.
-It can also be viewed as a collection of solutions to many different problems.
+It can also be viewed as a collection of solutions to many problems.
 All of these solutions work together to solve a bigger problem.</p>
 <h2 id="design-patterns-in-rust"><a class="header" href="#design-patterns-in-rust">Design patterns in Rust</a></h2>
 <p>There are many problems that share the same form.
