--- a/patterns/creational/builder.html
+++ b/patterns/creational/builder.html
@@ -230,7 +230,7 @@ fn builder_test() {
 <span class="boring">}
 </span></code></pre></pre>
 <h2 id="motivation"><a class="header" href="#motivation">Motivation</a></h2>
-<p>Useful when you would otherwise require many different constructors or where
+<p>Useful when you would otherwise require many constructors or where
 construction has side effects.</p>
 <h2 id="advantages"><a class="header" href="#advantages">Advantages</a></h2>
 <p>Separates methods for building from other methods.</p>
